feat: add "_blank" to CV button

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     Tem algum projeto em mente? Bora trabalhar juntos!✨
                 </p>
 
-                <a href="./assets/CV/Curriculo - Beatriz Cardoso Martins.pdf"><button>Dowload CV <img
+                <a target="_blank" href="./assets/CV/Curriculo - Beatriz Cardoso Martins.pdf"><button>Dowload CV <img
                             src="./assets/icons/dowload.svg" alt="dowload-cv-botão"></button></a>
                 <img class="gif" src="./assets/shapes/stairs_dot_animate.gif" alt="animações">
             </article>
