--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@
                     <span>TAILWIND</span>
                 </div>
                 <div class="block-stack">
+                    <img src="./assets/stacks/sass.svg" alt="sass">
+                    <span>SASS</span>
+                </div>
+                <div class="block-stack">
                     <img width="50px" src="./assets/stacks/styledComponents.png" alt="styled components">
                     <span>STYLED COMPONENTS</span>
                 </div>
